Replaced old detection system with the new, much faster websocket based one.