@@ -23,39 +23,18 @@ public class Main {
     public static void main(String[] args) {
         FlatDarculaLaf.setup();
 
-        Communicator communicator = new Communicator(Constant.mainFolder + "/queue");
-        communicator.sendFlag();
+        Communicator.checkInstances();
+        Communicator.startServer();
 
-        if (isAlreadyRunning()) {
-            Runtime.getRuntime().exit(0);
-            return;
-        }
+        Utils.sleep(1000);
+
         if (!(args.length >= 1 && args[0].equals("autostart"))) MainWindow.show();
 
-        communicator.clearRestart();
+
         ProcessChecker.start();
         Tray.setUp();
 
         log.info("Server address is {}", Constant.serverUrl);
         log.info("Install folder is {}", Constant.mainFolder);
     }
-
-    public static boolean isAlreadyRunning() {
-        List<OSProcess> lsp = new SystemInfo().getOperatingSystem().getProcesses();
-        int count = 0;
-        for (OSProcess osProcess : lsp) {
-            if (osProcess.getCommandLine().contains(Constant.javaBin)) {
-                count++;
-                if (count >= 2) {
-                    break;
-                }
-            }
-        }
-        if (count > 1) {
-            return true;
-        }
-        return false;
-    }
-
-    //Launch cmd: java --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED -jar DesktopApp-1.0-SNAPSHOT.jar
 }
